--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -19,36 +19,35 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
-en:
- header_1: "Home"
- header_2: "Products"
- header_3: "Boxes & Prices"
+ru:
+ header_1: "Начало"
+ header_2: "Продукты"
+ header_3: "Наборы и цены"
  header_4: "FAQS"
- header_5: "Contacts"
- header_6: "Buy now"
- statement: "Natural Delicious Sweets & Snacks"
- enforce: "From heart of wildness so healthy and so good"
- overview_title: "Short overview"
- overview_1: "SIBERRYA are highly simple, healthy and totally natural foods. Each product has one or two key ingredients – berries, nuts or dried fruits. They have no preservatives or colourings, no taste enhancers or gluten. They are rich in vitamins and microelements needed for good health and happy well-being."
- overview_2: "Trully natural"
- list_1: "Good for your productivity and immunity"
- list_2: "Good for your heart and brain"
- list_3: "Good for your skin and recouperation"
- list_4: "Good for your bones and digestion"
- list_5: "Good for your weight control and brain"
- set_title: "Our sets of sweets and snacks"
- set_sub_title: "Idealy balanced boxes with your favourite treats"
- first_pack_title: "Light pack"
- second_pack_title: "Standard pack"
- third_pack_title: "Large pack"
- fourth_pack_title: "Extra large pack"
- second_pack_descr: "Most popular"
- shipping: "Free shipping"
- first_product_name: "packs of rocks"
- second_product_name: "chocolates"
- third_product_name: "slices"
- bonus: "extra surprise"
- pack_button: "Buy now"
+ header_5: "Контакты"
+ header_6: "Купить"
+ statement: "Натуральные и вкусные снэки и сладости"
+ enforce: "Из самого сердца Сибири"
+ overview_1: "SIBERRYA это здоровые натуральные снэки и кофеты, состоящие из ягод, орехов и сушеных фруктов. В их производстве не используются консерванты, красители, усилители вкуса, глютен. В них содержится много витамин и микроэлементов необходимых для здорового и счастливого образа жизни."
+ overview_2: "Выращенные в экологически чистых районах"
+ list_1: "Повышают производительность и иммунитет"
+ list_2: "Полезны для сердца и мозга"
+ list_3: "Полезны для кожи и костей"
+ list_4: "Улучшают пищеварение"
+ list_5: "Помогают контролировать вес"
+ set_title: "Наши наборы снэков и сладостей"
+ set_sub_title: "Идеально сбалансированные"
+ first_pack_title: "Пробный"
+ second_pack_title: "Стандарт"
+ third_pack_title: "Большой"
+ fourth_pack_title: "Extra большой"
+ second_pack_descr: "Рекомендуем!"
+ shipping: "Бесплатная доставка"
+ first_product_name: "упаковок конфет"
+ second_product_name: "шоколадок"
+ third_product_name: "казинаков"
+ bonus: "дополнительный сюрприза"
+ pack_button: "Купить"
 
  first_br_name: "Sweet nutty"
  first_br_description_name: "Ingredients"
