--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,8 +26,8 @@ en:
  header_4: "FAQS"
  header_5: "Contacts"
  header_6: "Buy now"
- statement: "Natural Delicious Sweets & Snacks"
- enforce: "From heart of wildness so healthy and so good"
+ statement: "Sweets without harm to health"
+ enforce: "Lower-calorie. Higher value. Healthy. Delicious."
  overview_title: "Short overview"
  overview_1: "SIBERRYA are highly simple, healthy and totally natural foods. Each product has one or two key ingredients – berries, nuts or dried fruits. They have no preservatives or colourings, no taste enhancers or gluten. They are rich in vitamins and microelements needed for good health and happy well-being."
  overview_2: "Trully natural"
