--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -26,8 +26,8 @@ ru:
  header_4: "FAQS"
  header_5: "Контакты"
  header_6: "Купить"
- statement: "Натуральные и вкусные снэки и сладости"
- enforce: "Из самого сердца Сибири"
+ statement: "Сладости без вреда для здровья"
+ enforce: "Низкокаллорийные. Натутральные. Вкусные."
  overview_1: "SIBERRYA это здоровые натуральные снэки и кофеты, состоящие из ягод, орехов и сушеных фруктов. В их производстве не используются консерванты, красители, усилители вкуса, глютен. В них содержится много витамин и микроэлементов необходимых для здорового и счастливого образа жизни."
  overview_2: "Выращенные в экологически чистых районах"
  list_1: "Повышают производительность и иммунитет"
