--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,17 +36,17 @@ en:
  list_3: "Good for your skin and recouperation"
  list_4: "Good for your bones and digestion"
  list_5: "Good for your weight control and brain"
- set_title: "Our sets of sweets and snacks"
- set_sub_title: "Idealy balanced boxes with your favourite treats"
+ set_title: "We created different boxes for you to enjoy our products"
+ set_sub_title: "It's cheaper to buy box"
  first_pack_title: "Light pack"
  second_pack_title: "Standard pack"
  third_pack_title: "Large pack"
  fourth_pack_title: "Extra large pack"
  second_pack_descr: "Most popular"
  shipping: "Free shipping"
- first_product_name: "packs of rocks"
- second_product_name: "chocolates"
- third_product_name: "slices"
+ first_product_name: "Berry Rocks"
+ second_product_name: "Chocolates"
+ third_product_name: "Slices"
  bonus: "extra surprise"
  pack_button: "Buy now"
 
